--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CT9</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="resposive.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="./font/all.min.css">
     <link rel="icon" href="./img/LOGO2.png" type="img/x-icon">
 
